tests/health/tests__lsp__prefix_completion_test.toit.gold
tests/lsp/prefix_completion_test.toit:33:23: error: Unexpected token while parsing type
class F extends Klass.:
                      ^
tests/lsp/prefix_completion_test.toit:38:26: error: Unexpected token while parsing type
class G implements Inter.:
                         ^
tests/lsp/prefix_completion_test.toit:4:24: error: Unresolved interface
class A implements pre.foo:
                       ^~~
tests/lsp/prefix_completion_test.toit:13:25: error: Unresolved interface
class B implements glob.foo:
                        ^~~
tests/lsp/prefix_completion_test.toit:23:23: error: Unresolved super class
class D extends Klass.x:
                      ^
tests/lsp/prefix_completion_test.toit:28:26: error: Unresolved interface
class E implements Inter.y:
                         ^
